--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ section {
 #homepage {
     background-image: url("hero.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .homepage h1 {
