--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ hr {
 
 section {
     width: 100%;
-    min-height: 440px;
+    min-height: 280px;
     border-bottom: 3px solid #aba9a9;
 }
 
@@ -145,16 +145,17 @@ section {
 }
 
 section#content {
-    min-height: 540px;
+    background-color: #eaeaea;
+    padding-bottom: 30px;
+    padding-top: 30px;
 }
 
-.content h3 {
+/* .content h3 {
     font-size: 18px;
     font-weight: bold;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
+    margin-bottom: 20px;
+} */
 
 .content .column-container {
     display: flex;
@@ -163,29 +164,42 @@ section#content {
 }
 
 .column-container .col-child {
-    width: 100%;
-    background-color: skyblue;
-    border: 3px solid slategray;
-    text-align: center;
+    max-width: 410px;
 }
 
 .column-container .col-child h4 {
     margin-bottom: 10px;
+    font-size: 18px;
+    text-align: center;
 }
 
 .column-container .col-child p {
     font-size: 14px;
-    line-height: 28px;
+    line-height: 26px;
+    padding-left: 10px;
 }
 
 .footer {
     margin-top: 20px;
-    background-color: teal;
+    background-color: var(--bl2-color);
+    color: var(--bg-color);
 }
 
-.footer h3 {
-    font-weight: bold;
+.footer .sub-menu {
     text-align: center;
+}
+
+.footer .sub-menu a {
+    margin-right: 5px;
+    font-weight: 450;
+    text-shadow: 0 0 1px rgba(0, 0, 0, .5);
+}
+
+.footer .sub-menu p {
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: bold;
+    text-shadow: 0 0 2px rgba(0, 0, 0, .5);
 }
 
 
